# rayx-python

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  build.sh  builder.sh  install_nvidia.md  log.txt  publish.sh  pyproject.toml  rayx.pyx  setup.py  setup_dev.sh  test.py
.github/workflows/: wheels.yml
docs/: conf.py  index.md  requirements.txt
docs/api/: beamline.md  functions.md  index.md  sources-and-elements.md
docs/installation/: index.md
docs/tutorials/: index.md  tracing-a-beamline.md
examples/: metrix.ipynb  tutorial_tracing.py
pkgs/rayx_extra/: util.py
python/rayx/: __init__.py  data.py
rayx/: CMakeLists.txt  __init__.py  main.cpp
src/: CMakeLists.txt  __init__.py  data.py  main.cpp  rayx_ext.cpp  reflection.hpp
src/rayx/: __init__.py  __init__.pyi  data.py
tests/: test_data.py  test_init.py  test_orientation.py  test_stubs.py
tests/res/: test.rml
tools/: bootstrap.sh  build_docs.sh  release.sh
