[project]
name = "rayx"
dynamic = ["version"]
description = "Python bindings for RAYX"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "matplotlib>=3.9.4",
    "numpy >= 2.0.0",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
]
requires-python = ">=3.12"
authors = [{ name = "RAYX team", email = "rayx-support@helmholtz-berlin.de" }]
maintainers = [
    { name = "RAYX team", email = "rayx-support@helmholtz-berlin.de" },
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.5", "ipython"]
test = ["pytest>=7.0", "pytest-cov"]

[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["python/rayx"]
cmake.build-type = "Release"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["rayx/_version.py"]

[tool.setuptools_scm] # Section required
write_to = "rayx/_version.py"

[tool.cibuildwheel]
archs = ["x86_64"]
build = ["*manylinux*"]
manylinux-x86_64-image = "gitea.valentinstoecker.de/vls/manylinux_cuda"

[tool.cibuildwheel.linux]
environment = { SETUPTOOLS_SCM_OVERRIDES_FOR_RAYX = "{ local_scheme = 'no-local-version' }" }

[tool.pytest.ini_options]
pythonpath = ["python"]

[tool.uv]
package = false

[dependency-groups]
dev = ["setuptools-scm>=10.2.0", "twine>=6.2.0"]
